--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -19,142 +19,142 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:background="@drawable/rounded_button_field"
-        android:drawableStart="@color/black"
-        android:hint="@string/username_hint"
-        android:padding="16dp"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/register_tittle" />
+    <!--   <EditText
+           android:id="@+id/username"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="12dp"
+           android:background="@drawable/rounded_button_field"
+           android:drawableStart="@color/text_black"
+           android:hint="@string/username_hint"
+           android:padding="16dp"
+           android:textColor="#000000"
+           android:textSize="16sp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/register_tittle" />
 
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_button_field"
-        android:drawableStart="@color/black"
-        android:hint="@string/name_hint"
-        android:padding="16dp"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/username" />
+       <EditText
+           android:id="@+id/name"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="12dp"
+           android:layout_marginTop="8dp"
+           android:background="@drawable/rounded_button_field"
+           android:drawableStart="@color/text_black"
+           android:hint="@string/name_hint"
+           android:padding="16dp"
+           android:textColor="#000000"
+           android:textSize="16sp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/username" /> -->>
 
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_button_field"
-        android:drawableStart="@color/black"
-        android:hint="@string/email_hint"
-        android:padding="16dp"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name" />
+       <EditText
+           android:id="@+id/email"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="12dp"
+           android:layout_marginTop="8dp"
+           android:background="@drawable/rounded_button_field"
+           android:drawableStart="@color/text_black"
+           android:hint="@string/email_hint"
+           android:padding="16dp"
+           android:textColor="#000000"
+           android:textSize="16sp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/register_tittle" />
 
-    <EditText
-        android:id="@+id/repeatEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_button_field"
-        android:drawableStart="@color/black"
-        android:hint="@string/repeat_email_hint"
-        android:padding="16dp"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email" />
+       <EditText
+           android:id="@+id/repeatEmail"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="12dp"
+           android:layout_marginTop="8dp"
+           android:background="@drawable/rounded_button_field"
+           android:drawableStart="@color/text_black"
+           android:hint="@string/repeat_email_hint"
+           android:padding="16dp"
+           android:textColor="#000000"
+           android:textSize="16sp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/email" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_button_field"
-        android:drawableStart="@color/black"
-        android:hint="@string/password_hint"
-        android:padding="16dp"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/repeatEmail" />
+       <EditText
+           android:id="@+id/password"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="12dp"
+           android:layout_marginTop="8dp"
+           android:background="@drawable/rounded_button_field"
+           android:drawableStart="@color/text_black"
+           android:hint="@string/password_hint"
+           android:padding="16dp"
+           android:textColor="#000000"
+           android:textSize="16sp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/repeatEmail" />
 
-    <EditText
-        android:id="@+id/repeatPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_button_field"
-        android:drawableStart="@color/black"
-        android:hint="@string/repeat_password_hint"
-        android:padding="16dp"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password" />
+       <EditText
+           android:id="@+id/repeatPassword"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="12dp"
+           android:layout_marginTop="8dp"
+           android:background="@drawable/rounded_button_field"
+           android:drawableStart="@color/text_black"
+           android:hint="@string/repeat_password_hint"
+           android:padding="16dp"
+           android:textColor="#000000"
+           android:textSize="16sp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/password" />
 
-    <CheckBox
-        android:id="@+id/checkbox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/checkbox_text"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/repeatPassword" />
+       <CheckBox
+           android:id="@+id/checkbox"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="12dp"
+           android:layout_marginTop="10dp"
+           android:text="@string/checkbox_text"
+           android:textColor="#000000"
+           android:textSize="14sp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/repeatPassword" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/registerButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="10dp"
-        android:elevation="0dp"
-        android:background="@drawable/rounded_button"
-        android:padding="16dp"
-        android:text="@string/register_button_text"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/checkbox" />
+       <androidx.appcompat.widget.AppCompatButton
+           android:id="@+id/registerButton"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="12dp"
+           android:layout_marginTop="10dp"
+           android:elevation="0dp"
+           android:background="@drawable/rounded_button"
+           android:padding="16dp"
+           android:text="@string/register_button_text"
+           android:textColor="#FFFFFF"
+           android:textSize="18sp"
+           android:textStyle="bold"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/checkbox" />
 
-    <TextView
-        android:id="@+id/already_account"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/already_account_text"
-        android:textAlignment="center"
-        android:textColor="#2F4858"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/registerButton" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+       <TextView
+           android:id="@+id/already_account"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="12dp"
+           android:layout_marginTop="10dp"
+           android:text="@string/already_account_text"
+           android:textAlignment="center"
+           android:textColor="#2F4858"
+           android:textSize="16sp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/registerButton" />
+   </androidx.constraintlayout.widget.ConstraintLayout>
