--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/app_name"
-        android:textColor="@color/"
+        android:textColor="@color/text_black"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,8 +39,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/very_light_blue"
         android:text="@string/home_register"
+        android:textColor="@color/text_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -51,9 +52,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/teal_700"
+        android:backgroundTint="@color/pale_cyan"
         android:text="@string/home_login"
-        android:textColor="@color/white"
+        android:textColor="@color/text_description"
         app:layout_constraintBottom_toTopOf="@id/home_register_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
