--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -53,7 +53,7 @@
     </fragment>
     <fragment
         android:id="@+id/gameFragment"
-        android:name="com.jlmillan.sudokumaster.ui.feature.sudoku.GameFragment"
+        android:name="com.jlmillan.sudokumaster.ui.feature.sudoku.SudokuFragment"
         android:label="GameFragment" >
         <action
             android:id="@+id/action_gameFragment_to_mainFragment"
