--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -19,39 +19,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--   <EditText
-           android:id="@+id/username"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_marginHorizontal="12dp"
-           android:background="@drawable/rounded_button_field"
-           android:drawableStart="@color/text_black"
-           android:hint="@string/username_hint"
-           android:padding="16dp"
-           android:textColor="#000000"
-           android:textSize="16sp"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/register_tittle" />
-
        <EditText
-           android:id="@+id/name"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_marginHorizontal="12dp"
-           android:layout_marginTop="8dp"
-           android:background="@drawable/rounded_button_field"
-           android:drawableStart="@color/text_black"
-           android:hint="@string/name_hint"
-           android:padding="16dp"
-           android:textColor="#000000"
-           android:textSize="16sp"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/username" /> -->>
-
-       <EditText
-           android:id="@+id/email"
+           android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
@@ -67,7 +36,7 @@
            app:layout_constraintTop_toBottomOf="@+id/register_tittle" />
 
        <EditText
-           android:id="@+id/repeatEmail"
+           android:id="@+id/repeat_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
@@ -80,10 +49,10 @@
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/email" />
+           app:layout_constraintTop_toBottomOf="@id/email_register" />
 
        <EditText
-           android:id="@+id/password"
+           android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
@@ -96,10 +65,10 @@
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/repeatEmail" />
+           app:layout_constraintTop_toBottomOf="@id/repeat_email_register" />
 
        <EditText
-           android:id="@+id/repeatPassword"
+           android:id="@+id/repeat_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
@@ -112,7 +81,7 @@
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/password" />
+           app:layout_constraintTop_toBottomOf="@id/password_register" />
 
        <CheckBox
            android:id="@+id/checkbox"
@@ -125,10 +94,10 @@
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/repeatPassword" />
+           app:layout_constraintTop_toBottomOf="@id/repeat_password_register" />
 
        <androidx.appcompat.widget.AppCompatButton
-           android:id="@+id/registerButton"
+           android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
@@ -156,5 +125,5 @@
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/registerButton" />
+           app:layout_constraintTop_toBottomOf="@id/register_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
