Changes in implementation and layouts

--- a/app/src/main/res/layout/fragment_sudoku.xml
+++ b/app/src/main/res/layout/fragment_sudoku.xml
@@ -25,6 +25,16 @@
         app:layout_constraintTop_toBottomOf="@id/sudokuBoard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/timeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Time: 00:00"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/scoreTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/gameFinishedTextView"
